# Emergence-World

./: .gitignore  CLAUDE.md  PROJECT_ANALYSIS_CN.md  alembic.ini  projects.md  pyproject.toml
PRJ-001/: README.md
PRJ-001/01-clarification/: clarification.md  review-report.md
PRJ-001/02-requirements/: requirements-list.md  review-report.md
PRJ-001/03-success-criteria/: review-report.md  success-criteria.md
PRJ-001/04-business-processes/: processes.md  review-report.md
PRJ-001/05-technical-spec/: functional-requirements.md  non-functional-requirements.md  review-report.md  technical-constraints.md
emergence_world/: .env.example  README.md  __init__.py  alembic.ini  config.py  database.py  main.py
emergence_world/agents/: prompt.py
emergence_world/alembic/: env.py
emergence_world/backend/: __init__.py  config.py  database.py  logging_config.py  main.py
emergence_world/backend/agents/: prompt.py
emergence_world/backend/alembic/: env.py
emergence_world/backend/core/: awi.py  engine.py  llm.py
emergence_world/backend/models/: __init__.py  agent.py  (+7 more)
emergence_world/core/: awi.py  engine.py  llm.py  scheduler.py
emergence_world/frontend/: package-lock.json
emergence_world/models/: __init__.py  agent.py  economy.py  governance.py  landmark.py  memory.py  world.py
emergence_world/seed/: agents.py  landmarks.py  loader.py
emergence_world/tools/: __init__.py  content.py  core.py  crime.py  governance.py  navigation.py  registry.py  social.py
emergence_world/ui/: console.py
frontend/: index.html  package.json
frontend/src/: hooks.ts  types.ts
(+32 files in other folders)
